<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            style="@style/AppName"/>

        <EditText
            android:id="@+id/login_id"
            android:hint="@string/login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            style="@style/EditText"/>

        <EditText
            android:id="@+id/login_password"
            android:hint="@string/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginLeft="15dp"
            style="@style/EditText"/>

        <Button
            android:id="@+id/login_button"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/normal_button"
            style="@style/NormalButton"/>

        <TextView
            android:text="OR"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            style="@style/RadioGroup">
            <RadioButton
                android:id="@+id/user_radio_btn"
                android:text="@string/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                style="@style/RadioButton"/>
            <RadioButton
                android:id="@+id/doctor_radio_btn"
                android:text="@string/doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                style="@style/RadioButton"/>
        </RadioGroup>

        <Button
            android:id="@+id/signup_button"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/normal_button"
            style="@style/NormalButton"/>

    </LinearLayout>
</RelativeLayout>