<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_above="@id/button_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                style="@style/FormLabel"/>
            <EditText
                android:id="@+id/name_editText"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/EditText"/>

            <TextView
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                style="@style/FormLabel"/>
            <EditText
                android:id="@+id/contact_editText"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/EditText"/>

            <TextView
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                style="@style/FormLabel"/>
            <EditText
                android:id="@+id/email_editText"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/EditText"/>

            <TextView
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                style="@style/FormLabel"/>
            <RadioGroup
                android:id="@+id/gender_radioGroup"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:orientation="horizontal"
                style="@style/RadioGroup">

                <RadioButton
                    android:id="@+id/male_radioButton"
                    android:text="@string/male"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    style="@style/RadioButton"/>

                <RadioButton
                    android:id="@+id/female_radioButton"
                    android:text="@string/female"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    style="@style/RadioButton"/>

            </RadioGroup>

            <TextView
                android:layout_row="4"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/qualification"
                style="@style/FormLabel"/>
            <EditText
                android:id="@+id/qualification_editText"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/EditText"/>

            <TextView
                android:layout_row="5"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/speciality"
                style="@style/FormLabel"/>
            <Spinner
                android:id="@+id/speciality_spinner"
                android:entries="@array/speciality"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:dropDownHeight="100dp"
                style="@style/Spinner"/>

            <TextView
                android:layout_row="6"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/check_in"
                style="@style/FormLabel"/>
            <RelativeLayout
                android:id="@+id/check_in_timePicker"
                android:layout_row="6"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/PaddingTopBottom">
                <TextView
                    android:id="@+id/check_in_clock_icon"
                    android:background="@drawable/clock_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/check_in_textView"
                    android:layout_toRightOf="@id/check_in_clock_icon"
                    android:layout_centerVertical="true"
                    android:text="9:00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FormLabel"/>
            </RelativeLayout>

            <TextView
                android:layout_row="7"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/check_out"
                style="@style/FormLabel"/>
            <RelativeLayout
                android:id="@+id/check_out_timePicker"
                android:layout_row="7"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                style="@style/PaddingTopBottom">
                <TextView
                    android:id="@+id/check_out_clock_icon"
                    android:background="@drawable/clock_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>
                <TextView
                    android:id="@+id/check_out_textView"
                    android:layout_toRightOf="@id/check_out_clock_icon"
                    android:layout_centerVertical="true"
                    android:text="18:00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FormLabel"/>
            </RelativeLayout>

            <TextView
                android:layout_row="8"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password"
                style="@style/FormLabel"/>
            <EditText
                android:id="@+id/password_editText"
                android:layout_row="8"
                android:layout_column="1"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/EditText"/>

            <EditText
                android:id="@+id/re_password_editText"
                android:layout_row="9"
                android:layout_column="1"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/EditText"/>

            <TextView
                android:layout_row="10"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/available"
                style="@style/FormLabel"/>
            <LinearLayout
                android:layout_row="10"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/PaddingTopBottom">
                <CheckBox
                    android:id="@+id/monday_checkBox"
                    android:text="@string/monday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CheckBox"/>
                <CheckBox
                    android:id="@+id/tuesday_checkBox"
                    android:text="@string/tuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CheckBox"/>
                <CheckBox
                    android:id="@+id/wednesday_checkBox"
                    android:text="@string/wednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CheckBox"/>
                <CheckBox
                    android:id="@+id/thursday_checkBox"
                    android:text="@string/thursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CheckBox"/>
                <CheckBox
                    android:id="@+id/friday_checkBox"
                    android:text="@string/friday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CheckBox"/>
                <CheckBox
                    android:id="@+id/saturday_checkBox"
                    android:text="@string/saturday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CheckBox"/>
                <CheckBox
                    android:id="@+id/sunday_checkBox"
                    android:text="@string/sunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CheckBox"/>
            </LinearLayout>

            <TextView
                android:layout_row="11"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/address"
                style="@style/FormLabel"/>
            <EditText
                android:id="@+id/address_editText"
                android:layout_row="11"
                android:layout_column="1"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/EditText"/>

            <TextView
                android:layout_row="12"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/city"
                style="@style/FormLabel"/>
            <EditText
                android:id="@+id/city_editText"
                android:layout_row="12"
                android:layout_column="1"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/EditText"/>

            <TextView
                android:layout_row="13"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/country"
                style="@style/FormLabel"/>
            <EditText
                android:id="@+id/country_editText"
                android:layout_row="13"
                android:layout_column="1"
                android:layout_columnWeight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/EditText"/>

        </GridLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cancel_button"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/cancel_button"
            style="@style/CancelButton"/>

        <Button
            android:id="@+id/signup_button"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/normal_button"
            style="@style/NormalButton"/>

    </LinearLayout>
</RelativeLayout>