<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/FormLabel"/>
        <EditText
            android:id="@+id/medicine_editText"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/EditText"/>

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            style="@style/FormLabel"/>
        <EditText
            android:id="@+id/description_editText"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/EditText"/>

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            style="@style/FormLabel"/>
        <RelativeLayout
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/duration_editText"
                android:layout_toLeftOf="@id/duration_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditText"/>
            <Spinner
                android:id="@+id/duration_spinner"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:entries="@array/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Spinner"/>
        </RelativeLayout>

    </GridLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/SmallPaddingTopBottom"
        android:paddingLeft="15dp">
        <CheckBox
            android:id="@+id/morning_checkBox"
            android:text="@string/morning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/CheckBox"/>
        <CheckBox
            android:id="@+id/afternoon_checkBox"
            android:text="@string/afternoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/CheckBox"/>
        <CheckBox
            android:id="@+id/night_checkBox"
            android:text="@string/night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/CheckBox"/>
    </LinearLayout>
    
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        style="@style/SmallPaddingTopBottom">
        <RadioButton
            android:id="@+id/before_meal_radioButton"
            android:text="@string/before_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/CheckBox"/>
        <RadioButton
            android:id="@+id/after_meal_radioButton"
            android:checked="true"
            android:text="@string/after_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/CheckBox"/>
    </RadioGroup>

</LinearLayout>